# pdf-reader-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_pdf_reader.py
.cursor/rules/: project-rules.mdc
src/academic_pdf_reader_mcp/: server.py
src/academic_pdf_reader_mcp/academic/: citation_parser.py  section_detector.py
src/academic_pdf_reader_mcp/core/: __init__.py  pdf_processor.py
src/pdf_reader/: server.py
src/pdf_reader/academic/: __init__.py  text_processor.py
