[project]
name = "pdf-reader"
version = "0.1.0"
description = "An MCP server for reading PDFs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.12.3",
    "pymupdf>=1.23.0",
    "uvicorn>=0.24.0",
]
[[project.authors]]
name = "mrcloudchase"
email = "mrcloudchase@gmail.com"

[build-system]
requires = [ "uv_build>=0.8.4,<0.9.0",]
build-backend = "uv_build"

[project.scripts]
pdf-reader = "pdf_reader:main"
